force-app/main/default/objects/D2C_SectionContent__c/D2C_SectionContent__c.object-meta.xml
<CustomObject>
    <description>This object is used to store the content of Our Favorites sections present within Neubau EyewareStore</description>
    <label>Section Content</label>
    <nameField>
        <displayFormat>SC-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Section Content</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>