force-app/main/default/objects/D2C_SectionContent__c/fields/D2C_ButtonLink__c.field-meta.xml
<CustomField>
    <fullName>D2C_ButtonLink__c</fullName>
    <description>This field will determine the button link.</description>
    <label>Section Button Link</label>
    <type>Url</type>
</CustomField>