force-app/main/default/objects/D2C_SectionContent__c/fields/D2C_Description__c.field-meta.xml
<CustomField>
    <fullName>D2C_Description__c</fullName>
    <description>Any notes, description required by Admin</description>
    <label>Description</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>