force-app/main/default/objects/D2C_SectionContent__c/fields/D2C_ImageUrl__c.field-meta.xml
<CustomField>
    <fullName>D2C_ImageUrl__c</fullName>
    <description>This field will have the media hub url of the image.</description>
    <label>Image URL</label>
    <required>true</required>
    <type>Url</type>
</CustomField>