force-app/main/default/objects/D2C_SectionContent__c/fields/D2C_Model__c.field-meta.xml
<CustomField>
    <fullName>D2C_Model__c</fullName>
    <description>Will be used to filter the content based on Model</description>
    <label>Model</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>T126</fullName>
            </value>
            <value>
                <fullName>T177</fullName>
            </value>
            <value>
                <fullName>T670</fullName>
            </value>
            <value>
                <fullName>T134</fullName>
            </value>
            <value>
                <fullName>TN08</fullName>
            </value>
            <value>
                <fullName>TN79</fullName>
            </value>
            <value>
                <fullName>T114</fullName>
            </value>
            <value>
                <fullName>T173</fullName>
            </value>
            <value>
                <fullName>T110</fullName>
            </value>
            <value>
                <fullName>TN72</fullName>
            </value>
            <value>
                <fullName>TN80</fullName>
            </value>
            <value>
                <fullName>TN68</fullName>
            </value>
            <value>
                <fullName>T042</fullName>
            </value>
            <value>
                <fullName>TN71</fullName>
            </value>
            <value>
                <fullName>T664</fullName>
            </value>
            <value>
                <fullName>TN81</fullName>
            </value>
            <value>
                <fullName>T132</fullName>
            </value>
            <value>
                <fullName>T149</fullName>
            </value>
            <value>
                <fullName>T085</fullName>
            </value>
            <value>
                <fullName>T095</fullName>
            </value>
            <value>
                <fullName>T127</fullName>
            </value>
            <value>
                <fullName>T611</fullName>
            </value>
            <value>
                <fullName>T162</fullName>
            </value>
            <value>
                <fullName>T064</fullName>
            </value>
            <value>
                <fullName>T096</fullName>
            </value>
            <value>
                <fullName>T012</fullName>
            </value>
            <value>
                <fullName>T057</fullName>
            </value>
            <value>
                <fullName>T115</fullName>
            </value>
            <value>
                <fullName>T618</fullName>
            </value>
            <value>
                <fullName>T048</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>