force-app/main/default/objects/D2C_SectionContent__c/fields/D2C_SalesConcept__c.field-meta.xml
<CustomField>
    <fullName>D2C_SalesConcept__c</fullName>
    <description>Will be used to filter the content based on Sales Concept along with Model</description>
    <label>Sales Concept</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Titanium Family</fullName>
            </value>
            <value>
                <fullName>Adam Family</fullName>
            </value>
            <value>
                <fullName>Acetate Titanium Family</fullName>
            </value>
            <value>
                <fullName>Lite-Fit Family</fullName>
            </value>
            <value>
                <fullName>3D Family</fullName>
            </value>
            <value>
                <fullName>Eugen Family</fullName>
            </value>
            <value>
                <fullName>Wire 3D Family</fullName>
            </value>
            <value>
                <fullName>Anton Family</fullName>
            </value>
            <value>
                <fullName>Sphere Family</fullName>
            </value>
            <value>
                <fullName>Flat-Wire Family</fullName>
            </value>
            <value>
                <fullName>Sigmund &amp; Carl Family</fullName>
            </value>
            <value>
                <fullName>Sam Family</fullName>
            </value>
            <value>
                <fullName>Walter &amp; Wassily Family</fullName>
            </value>
            <value>
                <fullName>Wire Family</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>