force-app/main/default/objects/D2C_SectionContent__c/fields/D2C_SectionHeader__c.field-meta.xml
<CustomField>
    <fullName>D2C_SectionHeader__c</fullName>
    <description>This field will determine the header of the section.</description>
    <inlineHelpText>ODEEH/NEUBAU</inlineHelpText>
    <label>Section Header</label>
    <length>255</length>
    <type>Text</type>
</CustomField>