force-app/main/default/objects/D2C_SectionContent__c/fields/D2C_SortOrder__c.field-meta.xml
<CustomField>
    <fullName>D2C_SortOrder__c</fullName>
    <description>This field determines the order of the images</description>
    <label>Sort Order</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>