force-app/main/default/objects/D2C_SectionContent__c/fields/D2C_Subtitle__c.field-meta.xml
<CustomField>
    <fullName>D2C_Subtitle__c</fullName>
    <description>This field will determine the sub title of the section.</description>
    <label>Section Sub Title</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>