force-app/main/default/objects/D2C_SectionContent__c/fields/D2C_Title__c.field-meta.xml
<CustomField>
    <fullName>D2C_Title__c</fullName>
    <description>This field will determine the title of the section.</description>
    <label>Section Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>