force-app/main/default/objects/D2C_SectionContent__c/recordTypes/Collection_Summary_Section.recordType-meta.xml
<RecordType>
    <fullName>Collection_Summary_Section</fullName>
    <active>true</active>
    <description>This record type is used to display fields for Collection Summary Section</description>
    <label>Collection Summary Section</label>
</RecordType>