force-app/main/default/objects/D2C_SectionContent__c/recordTypes/Dynamic_Image_Carousel.recordType-meta.xml
<RecordType>
    <fullName>Dynamic_Image_Carousel</fullName>
    <active>true</active>
    <description>This record type is used to display fields for Dynamic Image Carousel</description>
    <label>Dynamic Image Carousel</label>
</RecordType>